--- a/HrPortalV2.Web/HrPortalV2.Web.csproj
+++ b/HrPortalV2.Web/HrPortalV2.Web.csproj
@@ -55,6 +55,9 @@
     <Content Update="Areas\Admin\Views\_ViewStart.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Messages\MyMessagesSentToMyResumes.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
   </ItemGroup>
 
 </Project>
