--- a/HrPortalV2.Service/HrPortalV2.Service.csproj
+++ b/HrPortalV2.Service/HrPortalV2.Service.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\HrPortalV2.Models\HrPortalV2.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Identity.UI">
+      <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.identity.ui\2.1.1\lib\netstandard2.0\Microsoft.AspNetCore.Identity.UI.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
