--- a/HrPortalV2.Web/appsettings.json
+++ b/HrPortalV2.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=HrPortalV2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=HrPortalV2;User Id=sa;Password=Passw0rd1;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
