--- a/HrPortalV2.Web/HrPortalV2.Web.csproj
+++ b/HrPortalV2.Web/HrPortalV2.Web.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <MvcRazorCompileOnPublish>false</MvcRazorCompileOnPublish>
     <UserSecretsId>aspnet-HrPortalV2.Web-81DAC070-57A6-48CE-8F61-19C507A83543</UserSecretsId>
   </PropertyGroup>
 
